# yubikey-manager

./: .gitignore  BUILD.txt  mypy.ini  pyproject.toml  ykman.spec
.github/workflows/: macOS.yml  source-package.yml  ubuntu.yml  windows.yml
canokit/: management.py
ckman/: base.py  device.py  diagnostics.py  fido.py  oath.py  openpgp.py  otp.py  piv.py  util.py
ckman/cli/: __main__.py  apdu.py  config.py  fido.py  info.py  oath.py  openpgp.py  otp.py  piv.py  util.py
ckman/hid/: __init__.py  base.py  linux.py  macos.py  windows.py
ckman/pcsc/: __init__.py
tests/: test_device.py  test_management.py  test_oath.py  test_piv.py  test_scancodes.py  test_util.py
tests/device/: condition.py  conftest.py  test_ccid.py  test_fips_u2f_commands.py  test_interfaces.py  test_oath.py  test_openpgp.py  test_otp.py  test_piv.py
tests/device/cli/: conftest.py  test_config.py  test_misc.py  test_oath.py  test_openpgp.py  test_otp.py
tests/device/cli/piv/: conftest.py  test_fips.py  test_generate_cert_and_csr.py  test_key_management.py  test_management_key.py  test_misc.py  test_pin_puk.py  test_read_write_object.py
ykman/: diagnostics.py  logging_setup.py  openpgp.py  settings.py
ykman/cli/: __main__.py  aliases.py  apdu.py  fido.py  oath.py  openpgp.py  otp.py  piv.py  util.py
ykman/hid/: __init__.py  linux.py
ykman/pcsc/: __init__.py
yubikit/core/: __init__.py
