[tool.poetry]
name = "canokey-manager"
version = "4.0.9"
description = "Tool for managing your YubiKey configuration."
authors = ["Dain Nilsson <dain@yubico.com>"]
license = "BSD"
homepage = "https://github.com/canokeys/canokey-manager"
repository = "https://github.com/canokeys/canokey-manager"
keywords = ["canokey", "piv", "fido"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities"
]
include = [
  { path = "COPYING", format = "sdist"},
  { path = "NEWS", format = "sdist"},
  { path = "README.adoc", format = "sdist"},
  "man/",
  "tests/",
]
packages = [
  { include = "yubikit" },
  { include = "ykman" },
]


[tool.poetry.dependencies]
python = "^3.8"
cryptography = ">=3.0, <44"
pyOpenSSL = {version = ">=0.15.1", optional = true}
pyscard = "^2.0"
fido2 = "^1.0"
click = "^8.0"
pywin32 = {version = ">=223", platform = "win32"}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pyOpenSSL = "^23"
makefun = "^1.9.5"
pyinstaller = {version = "^6.0", python = "<3.13"}

[tool.poetry.scripts]
ykman = "ykman.cli.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
